sample-loki-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-loki-api
  labels:
    k8s-app: sample-loki-api
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: sample-loki-api
  template:
    metadata:
      labels:
        k8s-app: sample-loki-api
    spec:
      imagePullSecrets:
      - name: registrykey
      containers:
      - name: sample-loki-api
        image: labcabrera/sample-loki-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: web
          protocol: TCP
