sample-loki-api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-loki-api
  annotations:
    kubernetes.io/ingress.className: nginx-ingress
spec:
  rules:
    - host: sample-loki-api.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: sample-loki-api
                port:
                  number: 80
